# Cooling-Device

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cooling_Device.cbp  Main.cpp  Makefile  README.md  build-home.sh  build.sh  cmake_install.cmake  heath_correct_complex_2d.m  heath_verkeed.m
heat_equation_solver/: HeatSolver.cpp  HeatSolver.cpp.save  build.sh
heath_equation_solver/: HeathSolver.cpp  HeathSolver.hpp  heath_verkeed.m
optimalisation/: adjoint.cpp  adjoint.h  optimalisation.cpp  optimalisation.h  optimization.cpp
pyplotter/: pyplotter.cpp  pyplotter.hpp  pyplotter.py
